WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268394
[UnifiedPDF] Hit-testing is broken in 2-up mode
https://bugs.webkit.org/show_bug.cgi?id=268394
Summary
[UnifiedPDF] Hit-testing is broken in 2-up mode
Simon Fraser (smfr)
Reported
2024-01-30 10:25:53 PST
Hit-testing is broken in 2-up mode in UnifiedPDF
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-30 10:26:07 PST
<
rdar://problem/121941334
>
Simon Fraser (smfr)
Comment 2
2024-01-30 14:31:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23538
EWS
Comment 3
2024-01-30 17:56:11 PST
Committed
273802@main
(f275b68006b0): <
https://commits.webkit.org/273802@main
> Reviewed commits have been landed. Closing PR #23538 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug