[UnifiedPDF] Hit-testing is broken in 2-up mode https://bugs.webkit.org/show_bug.cgi?id=268394 rdar://121941334

Reviewed by Tim Horton.

`nearestPageIndexForDocumentPoint()` had a `notImplemented()` for two-up display.
It turns out that we don't need the concept of "nearest" page, so just change
the implementation to `pageBounds.contains(point)` for all layout modes.
Change the naming in `pdfElementTypesForPluginPoint()` to remove the "maybe" also.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::pageIndexForDocumentPoint const):
(WebKit::UnifiedPDFPlugin::pdfElementTypesForPluginPoint const):
(WebKit::UnifiedPDFPlugin::handleMouseEvent):
(WebKit::UnifiedPDFPlugin::nearestPageIndexForDocumentPoint const): Deleted.

Canonical link: https://commits.webkit.org/273802@main